<resources>
    <string name="app_name">DisasterManagement</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot_password</string>
    <string name="or">OR</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="disaster_management">Disaster Management</string>
    <string name="emergency">Emergency</string>
    <string name="disasters">Disasters</string>
    <string name="volunteers">Volunteers</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="disaster_id">Disaster Id: </string>
    <string name="city">City</string>
    <string name="save_amp_send"><![CDATA[Save & Send]]></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="disaster_prompt">Choose a disaster</string>
    <string name="quit">Quit</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>

    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current_email">Current Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="generate_report">Generate Report</string>
    <string name="create_volunteer">Create Volunteer</string>


    <string-array name="disaster_arrays">
        <item>Bomb Blast</item>
        <item>Flood</item>
        <item>Other</item>
    </string-array>

    <string-array name="report_duration">
        <item>monthly</item>
        <item>quarterly</item>
        <item>yearly</item>
    </string-array>

    <string-array name="report_options">
        <item>city</item>
        <item>disaster_id</item>
    </string-array>

</resources>
