<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_emergency"

            android:title="@string/emergency" />
        <item
            android:id="@+id/nav_disasters"

            android:title="@string/disasters" />

        <item
            android:id="@+id/nav_volunteers"

            android:title="@string/volunteers" />
        <item
            android:id="@+id/nav_createVolunteer"

            android:title="@string/create_volunteer" />

            <item
                android:id="@+id/nav_profile"

                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"

                android:title="@string/logout" />
        <item
            android:id="@+id/nav_quit"

            android:title="@string/quit" />

    </group>

</menu>