<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlack"
    android:gravity="center"
    tools:context=".LoginActivity"
    >

    <AutoCompleteTextView
        android:id="@+id/loginUsernameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/loginPassEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_below="@+id/loginUsernameEt"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPassEt"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:text="@string/login" />


    <TextView
        android:id="@+id/createAccTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:text="@string/create_account"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />
</RelativeLayout>