<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorWhite">


        <EditText
            android:id="@+id/emergencyDateEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:hint="@string/date"
            android:inputType="date" />

        <EditText
            android:id="@+id/emergencyAddressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emergencyDateEt"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:hint="@string/address"
            android:inputType="textPostalAddress" />

        <Spinner
            android:id="@+id/emergencyDisasterSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emergencyAddressEt"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:entries="@array/disaster_arrays"
            android:prompt="@string/disaster_prompt" />

        <EditText
            android:id="@+id/emergencyDisasterIdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emergencyDisasterSpinner"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:hint="@string/disaster_id"
            android:inputType="text"
            android:visibility="gone" />

        <EditText
            android:id="@+id/emergencyCityEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emergencyDisasterIdEt"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:hint="City"
            android:inputType="textPostalAddress" />

        <Button
            android:id="@+id/saveAndSendBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emergencyCityEt"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:text="@string/save_amp_send" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>